--- a/JSON-Form/build.gradle
+++ b/JSON-Form/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
+    compile 'com.google.code.gson:gson:2.8.2'
 }
