--- a/JSON-Form/build.gradle
+++ b/JSON-Form/build.gradle
@@ -33,5 +33,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.android.support:design:25.1.1'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
 }
