Fix:添加纯表单显示编辑

--- a/JSON-Form/src/main/AndroidManifest.xml
+++ b/JSON-Form/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.jg.jsonform">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -31,7 +32,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <activity
-            android:name=".form.FormPureActivity"
+            android:name=".form.FormPureMatchingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:windowSoftInputMode="adjustPan|stateHidden" />
@@ -47,6 +48,8 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:windowSoftInputMode="adjustPan|stateHidden" />
+
+        <activity android:name=".FormPureActivity"/>
 
     </application>
 
