Fix:修改带附件表单渲染BUG

--- a/JSON-Form/src/main/AndroidManifest.xml
+++ b/JSON-Form/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jg.jsonform">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -38,18 +39,22 @@
             android:windowSoftInputMode="adjustPan|stateHidden" />
 
         <activity
-            android:name=".form.FormAttachmentActivity"
+            android:name=".form.FormAttachmentMatchingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:windowSoftInputMode="adjustPan|stateHidden" />
 
         <activity
-            android:name=".form.FromFoldActivity"
+            android:name=".form.FormFoldMatchingActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:windowSoftInputMode="adjustPan|stateHidden" />
 
-        <activity android:name=".FormPureActivity"/>
+        <activity android:name=".FormPureActivity" />
+
+        <activity android:name=".FormFoldActivity" />
+
+        <activity android:name=".FormAttachmentActivity" />
 
     </application>
 
